use click for cli

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ appium-python-client = "^3.0.0"
 beautifulsoup4 = "^4.12.2"
 lxml = "^4.9.3"
 python-dotenv = "^1.0.0"
+click = "^8.1.7"
 
 
 [tool.poetry.group.dev.dependencies]
