--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,14 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.13"
 appium-python-client = "^3.0.0"
 beautifulsoup4 = "^4.12.2"
 lxml = "^4.9.3"
 python-dotenv = "^1.0.0"
 click = "^8.1.7"
+pandas = "^2.1.1"
+openpyxl = "^3.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
